# stock-agent

./: .env.example  .gitignore  AI_RULES.md  Dockerfile  README.md  compose.yml  justfile  pyproject.toml
backend/: .dockerignore  main.py  pyproject.toml
backend/a_domain/model/analysis/: analysis_context.py  web_search_result.py
backend/a_domain/model/chat/: ai_model.py  conversation.py
backend/a_domain/model/indicators/: technical_indicators.py
backend/a_domain/model/system/: stats.py
backend/a_domain/model/trading/: order.py  signal.py
backend/a_domain/ports/analysis/: quality_filter_provider.py  signal_repository.py  technical_analysis_provider.py
backend/a_domain/ports/chat/: knowledge_repository.py  model_catalog_repository.py  web_search_provider.py
backend/a_domain/ports/input/: social_media_provider.py
backend/a_domain/ports/market/: article_repository.py
backend/a_domain/ports/system/: logging_provider.py  notification_provider.py  platform_provider.py  repository_provider.py
backend/a_domain/ports/trading/: broker_provider.py
backend/a_domain/rules/: base.py
backend/a_domain/rules/collect/: content.py  freshness.py  market_criteria.py
backend/a_domain/rules/process/: __init__.py
backend/a_domain/rules/trading/: __init__.py  action.py
backend/a_domain/types/: constants.py
backend/b_application/: pipeline.py
backend/b_application/schemas/: config.py
backend/b_application/use_cases/chat/: ai_processor.py  context_loader.py
backend/b_application/use_cases/collect/: collect_articles.py  (+4 more)
backend/c_infrastructure/ai_models/: base.py  factory.py  model_catalog.py
backend/c_infrastructure/config/: loader.py
backend/c_infrastructure/persistence/: inmemory_repository.py
backend/c_infrastructure/services/: chat_styler_service.py  logger_service.py
backend/d_presentation/: dependencies.py  example_dependencies.py
backend/d_presentation/desktop/: app.py
backend/src/b_application/: pipeline.py  workflow.py
backend/src/d_presentation/: dependencies.py  example_dependencies.py
backend/tests/: test_ai_error_handling.py  test_domain_contracts.py  test_technical_indicator_calculator.py  test_workflow_orchestration.py
(+433 files in other folders)
